--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "type-check": "tsc --noEmit",
+    "build": "npm run type-check && next build",
     "start": "next start",
     "lint": "next lint"
   },
