modify: npm run devにlintチェックを追加

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "npm run lint && next dev --turbopack",
     "type-check": "tsc --noEmit",
     "build": "npm run type-check && next build",
     "start": "next start",
